# shuriken

./: README.md  main.py  pyproject.toml
shuriken/: suite.py
shuriken/shuriken_tools/: __init__.py  mal.py  mal_access.py  pipeline.py  youtube.py
tests/: test_shuriken.py
