[tool.poetry]
name = "shuriken"
version = "0.1.0"
description = "Anime data"
authors = ["Quincy Cambrel"]

[tool.poetry.dependencies]
python = "~3.8"
google-api-python-client = "~2.3.0"
requests = "~2.25.1"
beautifulsoup4 = "~4.9.3"
matplotlib = "~3.4.2"
streamlit = "~0.81.1"
pandas = "~1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
